Fixing some z-index issues

--- a/source/less/timenav/VCO.TimeMarker.less
+++ b/source/less/timenav/VCO.TimeMarker.less
@@ -40,23 +40,18 @@
 		margin:0;
 		width:100%;
 		height:100%;
-		//background-color: darken(@ui-background-color, 2);
 		background-color: fadeout(darken(@ui-background-color, 5), 85%);
 		border-top-right-radius:@time-marker-border-radius;
 		border-top-left-radius:@time-marker-border-radius;
-		//border-bottom-right-radius:@time-marker-border-radius;
-		
 		.vco-timemarker-timespan-content {
 			display:none;
 			position:absolute;
-			
 			width:100%;
 			background-color: @ui-background-color;
 			background-color: darken(@ui-background-color, 5);
-			//border: 1px solid darken(@ui-background-color, 5);
 			border-top-left-radius:@time-marker-border-radius;
 			border-top-right-radius:@time-marker-border-radius;
-			border-bottom-right-radius:@time-marker-border-radius;
+			//border-bottom-right-radius:@time-marker-border-radius;
 			height:100px;
 		}
 	}
@@ -126,7 +121,7 @@
 		
 	}
 	&:hover {
-		z-index:6;
+		//z-index:6;
 		.vco-timemarker-timespan {
 			background-color: fadeout(@color-background, 50%);
 			
@@ -171,7 +166,7 @@
 	}
 
 	&.vco-timemarker-active {
-		z-index:6;
+		//z-index:6;
 		.vco-timemarker-timespan {
 			background-color: fadeout(@color-theme, 75%);
 			
